WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289182
Web content processes sometimes crashes under Page::viewportArguments() calls from FrameLoader::commitProvisionalLoad()
https://bugs.webkit.org/show_bug.cgi?id=289182
Summary
Web content processes sometimes crashes under Page::viewportArguments() calls...
Abrar Rahman Protyasha
Reported
2025-03-05 11:44:48 PST
rdar://145386222
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2025-03-05 11:57:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41939
EWS
Comment 2
2025-03-05 14:47:32 PST
Committed
291655@main
(6fdcc035f663): <
https://commits.webkit.org/291655@main
> Reviewed commits have been landed. Closing PR #41939 and removing active labels.
EWS
Comment 3
2025-03-11 18:49:54 PDT
Committed
289651.258@safari-7621-branch
(be3a6fdcce7f): <
https://commits.webkit.org/289651.258@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2752 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug